# neiro.rs

./: .gitignore  Cargo.toml
crates/nuked-opn2/: Cargo.toml  build.rs
crates/nuked-opn2/c-src/: ym3438.c
crates/nuked-opn2/src/: chip.rs  ffi.rs  lib.rs  opn2.rs  tables.rs  tests.rs
docs/: neiro_specification.md
src/: main.rs
