[workspace]
members = [
    "crates/nuked-opn2",
    ".",
]
resolver = "2"

[package]
name = "neiro"
version = "0.1.0"
edition = "2024"
authors = ["sanokata"]
description = "MD style FM sound BGM/SE generator"

[dependencies]
nuked-opn2 = { path = "crates/nuked-opn2" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hound = "3.5"
midly = "0.5"
